# ClientOpsStudio

./: .gitignore  CMakeLists.txt  README.md  build.ps1  run.ps1
resources/: resources.qrc
src/: main.cpp
src/app/: AiConfigDialog.cpp  AiConfigDialog.h  MainWindow.cpp  MainWindow.h
src/domain/: DiagnosisEngine.cpp  DiagnosisEngine.h  LogSignals.h  Models.h  RuleEngine.cpp  RuleEngine.h  SignalExtractor.cpp  SignalExtractor.h
src/infra/: AiAdvisor.cpp  AiAdvisor.h  HttpClient.cpp  HttpClient.h  LogParser.cpp  LogParser.h  MarkdownExporter.cpp  MarkdownExporter.h  SqliteStore.cpp  SqliteStore.h
tests/: generate_bench_log.ps1  log_parser_bench.cpp  unit_tests.cpp
